--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,7 @@
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.json",
             "polyfills": "src/polyfills.ts",
-            "assets": [],
+            "assets": ["src/assets"],
             "styles": [
               "src/styles.css"
             ],
