--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@syncfusion/ej2": "^19.1.54",
     "@syncfusion/ej2-angular-popups": "^19.1.54",
     "core-js": "^2.5.1",
+    "firebase": "^8.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
