--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/compiler": "^7.0.0",
     "@angular/core": "^7.0.0",
     "@angular/forms": "^7.2.16",
+    "@angular/localize": "^15.1.5",
     "@angular/material": "^7.0.0",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@nguniversal/express-engine": "^7.1.1",
     "@syncfusion/ej2": "^19.1.54",
     "@syncfusion/ej2-angular-popups": "^19.1.54",
     "core-js": "^2.5.1",
